# graphics-course

./: .gitignore  README.md  index.html  requirements.txt
.github/workflows/: deploy.yml
CPP/: CMakeLists.txt  README.md  build.bat  build.sh  build_linux.sh  setup_dependencies.sh
CPP/Triangle/: CMakeLists.txt  phong_triangle.cpp  rose_textured_triangle.cpp  simple_triangle.cpp  textured_triangle.cpp  triangle_demo.cpp
CPP/include/: glad.c
CPP/include/glad/: glad.h
HTML/: README.md
HTML/Triangle/: phong_triangle.html  simple_rose_texture.html  triangle_demo.html
Python/Triangle/: advanced_phong_triangle.py  advanced_textured_triangle.py  phong_triangle.py  simple_triangle.py  textured_triangle.py  triangle_demo.py  triangle_pygame.py
Triangle/: README.md  interactive_triangle.html  rose_textured_triangle.html  simple_triangle.html
